# avocadodb

./: .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  DEPRECATED.md  GNUmakefile  ISSUE_TEMPLATE.md  LICENSE  LICENSES-OTHER-COMPONENTS.md  README  README.md  README.windows  README_maintainers.md
Documentation/: AQL.md  CMakeLists.txt  avocado.doxygen  avocadodb.css
Documentation/Books/: README.md
Documentation/DocuBlocks/: DatabaseDirectory.md  IndexHandle.md  IndexVerify.md  InsertEdgeCol.md  JSF_foxx_RequestContext_bodyParam.md  JSF_foxx_RequestContext_pathParam.md  JSF_foxx_RequestContext_queryParam.md  JSF_foxx_model_forDB.md  JSF_foxx_repository_all.md  JSF_foxx_repository_collection.md  WalLogfileFlushTimeout.md  WalLogfileHistoricLogfiles.md  WalLogfileReserveLogfiles.md  WalLogfileSyncInterval.md  aqlFunctionsRegister.md  aqlFunctionsToArray.md  aqlFunctionsUnregister.md  aqlFunctionsUnregisterGroup.md  clusterAgencyEndpoint.md  clusterAgencyPrefix.md  clusterMyAddress.md  col_dropIndex.md  collectionAll.md  collectionByExample.md  collectionClosedRange.md  collectionCount.md  collectionDatabaseCollectionName.md  collectionDatabaseCreate.md  collectionDatabaseDrop.md  collectionDatabaseName.md  collectionDatabaseNameAll.md  collectionDatabaseTruncate.md  collectionDrop.md  collectionEnsureGeoConstraint.md  collectionEnsureGeoIndex.md  collectionEnsureIndex.md  collectionFigures.md  collectionFirstExample.md  collectionFulltext.md  collectionGeo.md  (+57 more)
Documentation/Scripts/: codeBlockReader.py  deprecated.py  exampleHeader.js  html2html.sh  man.sed
Documentation/StyleGuide/: StyleGuide.tex
Documentation/man1/: avocadobench.1  avocadodump.1  avocadoexport.1  avocadoimp.1  avocadorestore.1  avocadosh.1
Documentation/man8/: avocado-dfdb.8  avocadod.8  foxx-manager.8  rcavocadod.8
Installation/: release.sh
Installation/ARM/: postinst  postrm  preinst  prerm  rc.avocadodb
Installation/Pipeline/: Jenkinsfile.feature
Installation/Ubuntu/: snapcraft.yaml.in
Installation/cmake/: CMakeCPackOptions.cmake.in
Installation/debian/: avocadodb-client.install  avocadodb.dirs  avocadodb.init  avocadodb.install  client_packagedesc.txt  control  copyright  dbg_packagedesc.txt  packagedesc.txt  postinst.in  postrm  preinst  prerm.in  templates.in
Installation/homebrew/: upgrade.sh
Installation/logrotate.d/: avocadod.systemd  avocadod.sysv
Installation/rpm/: avocadodb.spec.in  rc.avocadod.Centos  rc.avocadod.OpenSuSE  rc.avocadod.OpenSuSE_13
Installation/systemd/: avocadodb3.service.in
Installation/travisCI/: after_failure.sh  after_script.sh
UnitTests/: unittest.js
UnitTests/HttpInterface/: api-admin-spec.rb  api-aql-builtin-spec.rb  api-aqlfunction-spec.rb  api-async-spec-timecritical.rb  api-attributes-spec.rb  api-batch-spec.rb  api-collection-mmfiles-noncluster-spec.rb  api-collection-mmfiles-spec.rb  api-collection-rocksdb-noncluster-spec.rb  api-collection-rocksdb-spec.rb  api-cursor-spec-noncluster.rb  api-cursor-spec.rb  api-database-spec.rb  api-document-create-spec.rb  api-document-delete-spec.rb  api-document-key-spec.rb  api-document-read-spec.rb  api-document-update-spec.rb  api-documents-spec.rb  api-edge-spec.rb  api-edges-spec.rb  api-endpoint-spec.rb  api-explain-spec.rb  api-export-spec-timecritical-noncluster.rb  api-foxx-manager-spec-nightly.rb  api-general-graph-spec.rb  api-http-spec.rb  api-import-noncluster-spec.rb  api-import-spec.rb  api-index-geo-spec.rb  api-index-hash-spec.rb  api-index-persistent-spec.rb  api-index-skiplist-spec.rb  api-index-spec.rb  api-pipelining-spec-noncluster.rb  api-query-analysis-spec-timecritical.rb  api-replication-mmfiles-spec.rb  api-replication-rocksdb-spec.rb  api-simple-all-spec.rb  api-simple-any-spec.rb  (+19 more)
avocadod/: CMakeLists.txt  dbg.cmake
avocadod/Actions/: ActionFeature.cpp  ActionFeature.h  RestActionHandler.cpp  RestActionHandler.h  actions.cpp  actions.h
avocadod/Agency/: ActivationCallback.cpp  ActivationCallback.h  AddFollower.cpp  AddFollower.h  AgencyComm.cpp  AgencyComm.h  AgencyCommon.h  AgencyFeature.cpp  AgencyFeature.h  Agent.cpp  Agent.h  AgentActivator.cpp  AgentActivator.h  AgentCallback.cpp  AgentCallback.h  AgentConfiguration.cpp  AgentConfiguration.h  AgentInterface.h  CleanOutServer.cpp  CleanOutServer.h  (+40 more)
avocadosh/: CMakeLists.txt  dbg.cmake  install.cmake
avocadosh/Benchmark/: BenchFeature.cpp  BenchFeature.h  BenchmarkCounter.h  BenchmarkOperation.h  BenchmarkThread.h  avocadobench.cpp  test-cases.h
avocadosh/Dump/: DumpFeature.cpp  DumpFeature.h  avocadodump.cpp
avocadosh/Export/: ExportFeature.cpp  ExportFeature.h  avocadoexport.cpp
avocadosh/Import/: ImportFeature.cpp  ImportFeature.h  ImportHelper.cpp  ImportHelper.h  SenderThread.cpp  SenderThread.h  avocadoimp.cpp
avocadosh/Restore/: RestoreFeature.cpp  RestoreFeature.h  avocadorestore.cpp
avocadosh/Shell/: ClientFeature.cpp  ClientFeature.h  ConsoleFeature.cpp  ConsoleFeature.h  ShellFeature.cpp  ShellFeature.h  V8ClientConnection.cpp  V8ClientConnection.h  V8ShellFeature.cpp  V8ShellFeature.h  avocadosh.cpp
avocadosh/V8Client/: AvocadoClientHelper.cpp  AvocadoClientHelper.h
avocadosh/VPack/: VPackFeature.cpp  VPackFeature.h  avocadovpack.cpp
cmake/: AvocadoDBInstall.cmake  InstallAvocadoDBJSClient.cmake  InstallMacros.cmake
js/: GUIDELINES.md
lib/: CMakeLists.txt
scripts/: build-bundle.sh  build-docker.sh  buildCompletionsBash.sh  buildCompletionsFish.sh  cluster-run-common.sh  encryptionTest.sh  generateDocumentation.sh  killLocalCluster.sh  limitMemory.sh  perfanalysis.cpp  setupPerfEvents.sh  setupPerfEvents_onlyCriticalWrite.sh  shutdownLocalCluster.sh  startAvocadoDBClusterLocal.sh  startLocalCluster.bat  startLocalCluster.ps1  startLocalCluster.sh  startLocalDockerCluster.sh  startStandAloneAgency.sh  tmux_starter  unittest
tests/: CMakeLists.txt  main.cpp
utils/: cleanupCFiles  cppcheck.sh  generateErrorfile.py  generateExamples.js  generateExamples.py  generateExamples.sh  generateMimetypes.py  generateREADME.sh  generateSwagger.py  gitjslint.sh  jslint.sh  manPages.sh
(+2591 files in other folders)
